// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchButton icon with text should match snapshot 1`] = `
.c2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  opacity: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  position: relative;
  overflow: hidden;
  min-width: 14px;
}

.c0 {
  border-radius: 3px;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 14px;
  line-height: 18px;
  outline: none;
  padding: 10px 20px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 100ms ease-out,border-color 100ms ease-out,box-shadow 100ms ease-out;
  transition: background-color 100ms ease-out,border-color 100ms ease-out,box-shadow 100ms ease-out;
  white-space: nowrap;
  background-color: #f5f5f8;
  border-color: #f5f5f8;
  color: #555e6f;
}

.c0:hover {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #eaeaf0;
  border-color: #eaeaf0;
}

.c0:active {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #dcdce7;
  border-color: #dcdce7;
  color: #555e6f;
}

.c0:disabled {
  cursor: not-allowed;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f5f5f8;
  border-color: #f5f5f8;
  color: #b6bbc7;
}

.c0:focus {
  box-shadow: #dcdce7 0 0 0 2px;
}

.c3 {
  margin: 0 8px 0 0;
}

<SearchButton>
  <IconButton
    icon={
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              512,
              512,
              Array [],
              "f002",
              "M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z",
            ],
            "iconName": "search",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
    }
  >
    <Button
      disabled={false}
      fontColor=""
      isLoading={false}
      mode="default"
      type="button"
    >
      <StyledButton
        disabled={false}
        fontColor=""
        mode="default"
        type="button"
      >
        <StyledComponent
          disabled={false}
          fontColor=""
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "StyledButton-sc-1etazn9-0",
                "isStatic": false,
                "lastClassName": "c0",
                "rules": Array [
                  "border-radius:3px;border-style:solid;border-width:1px;box-sizing:border-box;cursor:pointer;font-size:14px;line-height:18px;outline:none;padding:10px 20px;text-align:center;text-decoration:none;transition:background-color ",
                  "100ms",
                  " ease-out,border-color ",
                  "100ms",
                  " ease-out,box-shadow ",
                  "100ms",
                  " ease-out;width:",
                  [Function],
                  ";white-space:nowrap;",
                  [Function],
                  ";",
                  [Function],
                  ";:hover{cursor:pointer;text-decoration:none;",
                  [Function],
                  "};:active{text-decoration:none;",
                  [Function],
                  "};:disabled{cursor:not-allowed;text-decoration:none;",
                  [Function],
                  "};:focus{",
                  [Function],
                  "}",
                ],
              },
              "displayName": "StyledButton",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "StyledButton-sc-1etazn9-0",
              "target": "button",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          mode="default"
          type="button"
        >
          <button
            className="c0"
            disabled={false}
            mode="default"
            type="button"
          >
            <ContentWrapper>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "ContentWrapper-sc-36hfub-0",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "align-self:center;display:inline-flex;flex-wrap:nowrap;max-width:100%;position:relative;overflow:hidden;min-width:14px;",
                      ],
                    },
                    "displayName": "ContentWrapper",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "ContentWrapper-sc-36hfub-0",
                    "target": "span",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <span
                  className="c1"
                >
                  <Content
                    isLoading={false}
                  >
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "Content-sc-18psqsj-0",
                            "isStatic": false,
                            "lastClassName": "c2",
                            "rules": Array [
                              "flex:1 1 auto;opacity:",
                              [Function],
                              ";overflow:hidden;text-overflow:ellipsis;white-space:nowrap;",
                            ],
                          },
                          "displayName": "Content",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "Content-sc-18psqsj-0",
                          "target": "span",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      isLoading={false}
                    >
                      <span
                        className="c2"
                      >
                        <IconButton__IconMarginRight>
                          <StyledComponent
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "IconButton__IconMarginRight-g9q5gl-0",
                                  "isStatic": false,
                                  "lastClassName": "c3",
                                  "rules": Array [
                                    "margin:0 8px 0 0;",
                                  ],
                                },
                                "displayName": "IconButton__IconMarginRight",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "IconButton__IconMarginRight-g9q5gl-0",
                                "target": "span",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                          >
                            <span
                              className="c3"
                            >
                              <FontAwesomeIcon
                                border={false}
                                className=""
                                fixedWidth={false}
                                flip={null}
                                icon={
                                  Object {
                                    "icon": Array [
                                      512,
                                      512,
                                      Array [],
                                      "f002",
                                      "M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z",
                                    ],
                                    "iconName": "search",
                                    "prefix": "fas",
                                  }
                                }
                                inverse={false}
                                listItem={false}
                                mask={null}
                                pull={null}
                                pulse={false}
                                rotation={null}
                                size={null}
                                spin={false}
                                swapOpacity={false}
                                symbol={false}
                                title=""
                                transform={null}
                              >
                                <svg
                                  aria-hidden="true"
                                  className="svg-inline--fa fa-search fa-w-16 "
                                  data-icon="search"
                                  data-prefix="fas"
                                  focusable="false"
                                  role="img"
                                  style={Object {}}
                                  viewBox="0 0 512 512"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                                    fill="currentColor"
                                    style={Object {}}
                                  />
                                </svg>
                              </FontAwesomeIcon>
                            </span>
                          </StyledComponent>
                        </IconButton__IconMarginRight>
                        Search
                      </span>
                    </StyledComponent>
                  </Content>
                </span>
              </StyledComponent>
            </ContentWrapper>
          </button>
        </StyledComponent>
      </StyledButton>
    </Button>
  </IconButton>
</SearchButton>
`;

exports[`SearchButton icon without text should match snapshot 1`] = `
.c2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  opacity: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  position: relative;
  overflow: hidden;
  min-width: 14px;
}

.c0 {
  border-radius: 3px;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 14px;
  line-height: 18px;
  outline: none;
  padding: 10px 20px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 100ms ease-out,border-color 100ms ease-out,box-shadow 100ms ease-out;
  transition: background-color 100ms ease-out,border-color 100ms ease-out,box-shadow 100ms ease-out;
  white-space: nowrap;
  background-color: #f5f5f8;
  border-color: #f5f5f8;
  color: #555e6f;
}

.c0:hover {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #eaeaf0;
  border-color: #eaeaf0;
}

.c0:active {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #dcdce7;
  border-color: #dcdce7;
  color: #555e6f;
}

.c0:disabled {
  cursor: not-allowed;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f5f5f8;
  border-color: #f5f5f8;
  color: #b6bbc7;
}

.c0:focus {
  box-shadow: #dcdce7 0 0 0 2px;
}

<SearchButton>
  <IconButton
    icon={
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              512,
              512,
              Array [],
              "f002",
              "M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z",
            ],
            "iconName": "search",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
    }
  >
    <Button
      disabled={false}
      fontColor=""
      isLoading={false}
      mode="default"
      type="button"
    >
      <StyledButton
        disabled={false}
        fontColor=""
        mode="default"
        type="button"
      >
        <StyledComponent
          disabled={false}
          fontColor=""
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "StyledButton-sc-1etazn9-0",
                "isStatic": false,
                "lastClassName": "c0",
                "rules": Array [
                  "border-radius:3px;border-style:solid;border-width:1px;box-sizing:border-box;cursor:pointer;font-size:14px;line-height:18px;outline:none;padding:10px 20px;text-align:center;text-decoration:none;transition:background-color ",
                  "100ms",
                  " ease-out,border-color ",
                  "100ms",
                  " ease-out,box-shadow ",
                  "100ms",
                  " ease-out;width:",
                  [Function],
                  ";white-space:nowrap;",
                  [Function],
                  ";",
                  [Function],
                  ";:hover{cursor:pointer;text-decoration:none;",
                  [Function],
                  "};:active{text-decoration:none;",
                  [Function],
                  "};:disabled{cursor:not-allowed;text-decoration:none;",
                  [Function],
                  "};:focus{",
                  [Function],
                  "}",
                ],
              },
              "displayName": "StyledButton",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "StyledButton-sc-1etazn9-0",
              "target": "button",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          mode="default"
          type="button"
        >
          <button
            className="c0"
            disabled={false}
            mode="default"
            type="button"
          >
            <ContentWrapper>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "ContentWrapper-sc-36hfub-0",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "align-self:center;display:inline-flex;flex-wrap:nowrap;max-width:100%;position:relative;overflow:hidden;min-width:14px;",
                      ],
                    },
                    "displayName": "ContentWrapper",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "ContentWrapper-sc-36hfub-0",
                    "target": "span",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <span
                  className="c1"
                >
                  <Content
                    isLoading={false}
                  >
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "Content-sc-18psqsj-0",
                            "isStatic": false,
                            "lastClassName": "c2",
                            "rules": Array [
                              "flex:1 1 auto;opacity:",
                              [Function],
                              ";overflow:hidden;text-overflow:ellipsis;white-space:nowrap;",
                            ],
                          },
                          "displayName": "Content",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "Content-sc-18psqsj-0",
                          "target": "span",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      isLoading={false}
                    >
                      <span
                        className="c2"
                      >
                        <FontAwesomeIcon
                          border={false}
                          className=""
                          fixedWidth={false}
                          flip={null}
                          icon={
                            Object {
                              "icon": Array [
                                512,
                                512,
                                Array [],
                                "f002",
                                "M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z",
                              ],
                              "iconName": "search",
                              "prefix": "fas",
                            }
                          }
                          inverse={false}
                          listItem={false}
                          mask={null}
                          pull={null}
                          pulse={false}
                          rotation={null}
                          size={null}
                          spin={false}
                          swapOpacity={false}
                          symbol={false}
                          title=""
                          transform={null}
                        >
                          <svg
                            aria-hidden="true"
                            className="svg-inline--fa fa-search fa-w-16 "
                            data-icon="search"
                            data-prefix="fas"
                            focusable="false"
                            role="img"
                            style={Object {}}
                            viewBox="0 0 512 512"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                              fill="currentColor"
                              style={Object {}}
                            />
                          </svg>
                        </FontAwesomeIcon>
                      </span>
                    </StyledComponent>
                  </Content>
                </span>
              </StyledComponent>
            </ContentWrapper>
          </button>
        </StyledComponent>
      </StyledButton>
    </Button>
  </IconButton>
</SearchButton>
`;
